--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,8 @@
       <div class="yuan"></div>
     </div>
     <div class="face left">
-      <img src="./images/flash.gif" alt="">
     </div>
     <div class="face right">
-      <img src="./images/flash.gif" alt="">
     </div>
     <div class="mouth">
       <div class="up">
@@ -32,6 +30,6 @@
       </div>
     </div>
   </div>
-  <script src="main.js"></script>
+<!--  <script src="main.js"></script>-->
 </body>
 </html>
